updated css_test page2

--- a/css_test/css_test.css
+++ b/css_test/css_test.css
@@ -3,4 +3,5 @@
 
 .someclass{
     font-family: "Sofia", sans-serif;
+    background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/6/6d/Activemarker2.PNG/75px-Activemarker2.PNG');
 }
